tests/flow/missing_check_sat.smt2
(set-logic ALL)
(assert true)
(get-model)
(exit)
